cicd/argocd/examples/bootstrap cluster + apps/bootstrap/ingress.yml
#  helm upgrade --install ingress-nginx ingress-nginx \
#    --repo https://kubernetes.github.io/ingress-nginx \
#    --namespace ingress-nginx --create-namespace
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
      host: kubernetes.docker.internal
